--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <body>
   <h1>This is heading 1.</h1>
 <p>
-This<br/>
-  will<br/>
-  print<br/>
-  on<br/>
-  differrent<br/>
-  lines!
+Hi. <br/>
+  My <br/>
+  name <br/>
+  is <br/>
+  Shelbi <br/>
+  I'm hungry.
   </p>
   <hr/>
   <h2> This is heading 2.</h2>
