--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <h1>This is heading 1.</h1>
 <p>
 Hi. <br/>
-  My <br/>
-  name <br/>
-  is <br/>
-  Shelbi <br/>
-  I'm hungry.
+  My name is Shelbi. <br/>
+ I'm hungry.  <br/>
+  
+  
   </p>
   <hr/>
   <h2> This is heading 2.</h2>
