--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Shelbi's Website</title>
-</head>
+<link rel=style sheet" type="text/css" href="stylesheet.css">
+  </head>
 <body>
 <p>
 Hi. <br/>
@@ -14,5 +15,9 @@ Hi. <br/>
   <hr/>
   <h2> This is heading 2.</h2>
   <h3> This is heading 3.</h3>
+    <div>
+      Inside the div element.
+      <This will be yellow!> </p>
+                                                            
   </body>
 </html>
