--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ Hi. <br/>
   <h3> This is heading 3.</h3>
     <div>
       Inside the div element.
-      <This will be yellow!> </p>
+      <p>This will be yellow! </p>
+    </div>
                                                             
   </body>
 </html>
