--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ Hi. <br/>
   <hr/>
   <h2> This is heading 2.</h2>
   <h3> This is heading 3.</h3>
+                                                           <img src = "">
+                                                                        <img src = "">
     <div>
       Inside the div element.
       <p>This will be yellow! </p>
