--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   </head>
 <body>
 <p>
-Hi. <br/>
-  My name is Shelbi. <br/>
+My name is Shelbi. <br/>
+  Welcome to my website!! <br/>
 
   
   
-  </p>
-  <hr/>
-  <h2> This is heading 2.</h2>
-  <h3> This is heading 3.</h3>
+ 
                                                            <img src = "">
                                                                         <img src = "">
     <div>
