--- a/SnapPortfolio.html
+++ b/SnapPortfolio.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
+      <a href="shelbi-stamper.github.io">Home</a>
     <h1>Shelbi's Snap Projects</h1>
 </body>
 </html>
