--- a/bounce.html
+++ b/bounce.html
@@ -9,9 +9,9 @@
       var CANVAS_WIDTH = 500;
       var CANVAS_HEIGHT = 300;
       // Radius of the ball
-      var BALL_RADIUS = 10;
+      var BALL_RADIUS = 20;
       // Color of the ball
-      var BALL_COLOR = "#0000ff";
+      var BALL_COLOR = "#002000";
       // The x and y position of the ball. Start in the center
       var ballX = CANVAS_WIDTH / 2;
       var ballY = CANVAS_HEIGHT / 2;
