--- a/bounce.html
+++ b/bounce.html
@@ -11,7 +11,8 @@
       // Radius of the ball
       var BALL_RADIUS = 20;
       // Color of the ball
-      var BALL_COLOR = "#200000";
+      var BALL_COLOR = "#f47b67";
+      var BALL_COLOR2 = "ff9ecb";
       // The x and y position of the ball. Start in the center
       var ballX = CANVAS_WIDTH / 2;
       var ballY = CANVAS_HEIGHT / 2;
