--- a/bounce.html
+++ b/bounce.html
@@ -10,6 +10,7 @@
       var CANVAS_HEIGHT = 300;
       // Radius of the ball
       var BALL_RADIUS = 20;
+      var BALL_RADIUS2 = 20;
       // Color of the ball
       var BALL_COLOR = "#f47b67";
       var BALL_COLOR2 = "ff9ecb";
