--- a/index.html
+++ b/index.html
@@ -23,3 +23,17 @@ My name is Shelbi. <br/>
                                                             
   </body>
 </html>
+
+ var chicken = false;
+  var beef = true;
+    var pork = true;
+if (chicken) {
+console.log("I'm having chicken!");
+}else if (beef){
+console.log("I'm having beef!");
+}else if (pork){
+console.log("I'm having pork!");
+}else{
+console.log("I guess I'm having rice....");
+}
+                                         
