--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ My name is Shelbi. <br/>
   
  
    
-
+<script>
  var chicken = false;
   var beef = true;
     var pork = true;
@@ -28,4 +28,4 @@ console.log("I'm having pork!");
 }else{
 console.log("I guess I'm having rice....");
 }
-                                         
+                                         </script>
