--- a/index.html
+++ b/index.html
@@ -11,21 +11,8 @@
 My name is Shelbi. <br/>
   Welcome to my website!! <br/>
 
-  
-  
- 
-   
-<script>
- var chicken = false;
-  var beef = true;
-    var pork = true;
-if (chicken) {
-console.log("I'm having chicken!");
-}else if (beef){
-console.log("I'm having beef!");
-}else if (pork){
-console.log("I'm having pork!");
-}else{
-console.log("I guess I'm having rice....");
-}
-                                         </script>
+for(var i = 1; i < 10000; i *= 2)
+// i *= 2 means i = i * 2 console.log(i);
+ }
+  </script>
+</body>
