--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>
 My name is Shelbi. <br/>
   Welcome to my website!! <br/>
-
+<script>
 for(var i = 1; i < 10000; i *= 2)
 // i *= 2 means i = i * 2 console.log(i);
  }
