--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 My name is Shelbi. <br/>
   Welcome to my website!! <br/>
 <script>
-for(var i = 1; i < 10000; i *= 2)
-// i *= 2 means i = i * 2 console.log(i);
- }
-  </script>
-</body> 
+var name = prompt ("What's your name?);
+                         console.log("Hello "+name);
+                         </script>
+                         </body>
+  
