--- a/hangman.html
+++ b/hangman.html
@@ -25,7 +25,7 @@
        while (remainingLetters > 0)
        {
          //Show player their progress
-         alert(answerArray.join(" ");
+         alert(answerArray.join(" "));
          //Get a guess from the player
          var guess = prompt("Please guess a single letter");
          if (guess === null)
