--- a/hangman.html
+++ b/hangman.html
@@ -39,7 +39,7 @@
                //they have guessed a letter, is it in the word?
                for(var j = 0; j < word.length; j++)
                {
-               answerArray[j] === guess)
+               answerArray[j] === guess;
                {
                answerArray [j] = guess;
                remainingLetters--;
@@ -49,8 +49,6 @@
            }
            alert("Good job! The answer was " + word);
            </script>
-           
-       }
-     </script>
+    
     </body>
    </html>
