--- a/experimentDOM.html
+++ b/experimentDOM.html
@@ -14,6 +14,14 @@
       // asking for the new header
       $("#main-heading").innerHTML = newHeadingText;
     </script>
+    $("body")
+    for (var i = 0; i < 3; i++)
+    {
+      // start counting at 0, stop when you get to 3, add 1 each time
+      var hobby = prompt("Tell me about one of your hobbies.");
+      $("body").append("<p>" + hobby + "</p>");
+    }
+   </script>
     
   </body>
 </html>
