--- a/experiment.html
+++ b/experiment.html
@@ -28,6 +28,13 @@
  };
  
  setInterval(moveHeading, 30); // remember 1000 is 1 second
+  
+  var clickHandler = function(event)
+  {
+   $("body").append("Click! " + event.pageX
+                    + " " + event.pageY);
+  };
+  $("#heading").click(clickHandler);
  </script>
  </body>
  
