--- a/treasure.html
+++ b/treasure.html
@@ -6,7 +6,7 @@
   <body>
     <h1 id = "heading">Find the hidden treasure!</h1>
     
-    <img id = "map"> width=400 height=400
+    <img id = "map" width=400 height=400
       src="https://nostarch.com/images/treasuremap.png">
       
       <p id="distance"></p>
