--- a/treasure.html
+++ b/treasure.html
@@ -33,6 +33,16 @@
                            (yDifference * yDifference)); // Pythagorean Therorem
         }
       // Code goes here
-      </script>
+      var clicks = 0;
+        
+        $("#map").click(function (event){
+          // Click handler goes here
+          // check for distance
+          // check if they are close enough to find the treasure
+          // if they have 'found it' tell them how many clicks it took
+          // give a hint if they are too far away
+          clicks++;
+        });
+    </script>
   </body>
  </html>
