--- a/treasure.html
+++ b/treasure.html
@@ -31,7 +31,7 @@
       {
         var xDifference = event.offsetX - treasure.x;
         var yDifference = event.offsety - treasure.y;
-        return.Math.sqrt((xDifference * xDifference) +
+        return Math.sqrt((xDifference * xDifference) +
                          (yDifference * yDifference)); //Pythagorean Theorem
       };
          var clicks = 0;
