--- a/treasure.html
+++ b/treasure.html
@@ -46,15 +46,16 @@
             alert("You are close to the treasure!");
           }else{
             // Give a hint if they are too far away
-          } if(distance <= 30)
+           if(distance <= 30)
             {
               alert("You are getting warmer!");
             }else if (distance <= 100)
             {
               alert("You're making prgress");
-            }else if (distance >= 101)
+            }else if (distance >= 101){
               alert("You need to keep looking!");
             }
+          }
       })=;
          clicks++;
          });  
