--- a/cars.html
+++ b/cars.html
@@ -57,3 +57,9 @@
     </script>
   </body>
 </html>
+     telsa.draw();
+     telsa.moveLeft();
+     telsa.moveLeft();
+     telsa.moveLeft();
+     
+     
