--- a/firstCanvas.html
+++ b/firstCanvas.html
@@ -4,14 +4,16 @@
     <title>Canvas</title>
   </head>
   <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
+    <canvas id="canvas" width="400" height"400"></canvas>
     
-  <script>
-    var canvas = document.getElementById("canvas"); // look for canvas
-    var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional
-    ctx.fillRect(0, 0, 10, 20); // draw and fill a rectangle, at (0, 0) with sides of length 10 and 20
+    <script>
+      var canvas = document.getElementById("canvas"); // look for canvas
+      var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional
+      ctx.fillRect(0, 0, 10, 20); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20
+      for(var i = 0; i < 5 ; i++)
+      {
+        ctx.fillRect(i*20, i*20, 20, 20); // draw and fill a rectangle
+      }
     </script>
-  
   </body>
- </html>
- 
+</html>
