--- a/firstCanvas.html
+++ b/firstCanvas.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Canvas</title>
-  </head>
-  <body>
-    <canvas id="canvas" width="400" height"400"></canvas>
-    
-    <script>
-      var canvas = document.getElementById("canvas"); // look for canvas
-      var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional
-      ctx.fillRect(0, 0, 10, 20); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20
-      for(var i = 0; i < 5 ; i++)
-      {
-        ctx.fillRect(i*20, i*20, 20, 20); // draw and fill a rectangle
-      }
-    </script>
-  </body>
+<head>
+<title>Canvas</title>
+</head>
+<body>
+<canvas id="canvas" width="400" height="400"></canvas>
+
+<script>
+var canvas = document.getElementById("canvas"); // look for canvas
+var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional 
+ctx.fillstyle= "#E6E6FA"
+ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20 
+ctx.fillRect(115, 50, 20, 20);  
+ctx.fillRect(25, 70, 200, 25);
+</script>
+</body>
 </html>
