--- a/firstCanvas.html
+++ b/firstCanvas.html
@@ -9,11 +9,11 @@
 <script>
 var canvas = document.getElementById("canvas"); // look for canvas
 var ctx = canvas.getContext("2d"); // tells javascript that the drawing will be 2 dimensional 
-ctx.fillstyle= "pink";
-ctx.fillstyle(0, 133, 400);
-ctx.fillstyle= "plum";
-ctx.fillstyle(0, 133, 400);
-ctx.fillstyle="powderblue";
+ctx.fillStyle= "pink";
+ctx.fillStyle(0, 133, 400);
+ctx.fillStyle= "plum";
+ctx.fillStyle(0, 133, 400);
+ctx.fillStyle="powderblue";
 ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20 
 ctx.fillRect(115, 50, 20, 20);  
 ctx.fillRect(25, 70, 200, 25);
