--- a/firstCanvas.html
+++ b/firstCanvas.html
@@ -15,7 +15,7 @@ ctx.fillStyle= "plum";
 ctx.fillRect(133, 0, 133, 400);
 ctx.fillStyle="powderblue";
 ctx.fillRect(266, 0, 266, 400);
-ctx.fillStyle="salmon";
+ctx.fillStyle="lightgray";
 ctx.fillRect(100, 0, 50, 50); // draw and fill a rectangle, at (0,0) with sides of length 10 and 20 
 ctx.fillRect(115, 50, 20, 20);  
 ctx.fillRect(25, 70, 200, 25);
